# pi-python

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.pi/logs/: zai-debug.jsonl
src/pi/: __init__.py  __main__.py  porting.py  upstream.py
src/pi/agent/: __init__.py  context.py  loop.py  models.py  tools.py  truncate.py
src/pi/agent/providers/: __init__.py  base.py  openai_compat.py  zai.py
src/pi/ai/: __init__.py  cli.py  sdk.py
src/pi/cli/: __init__.py  main.py  render.py  session.py
src/pi/coding_agent/: __init__.py  cli.py
src/pi/mom/: __init__.py  cli.py
src/pi/tui/: __init__.py
src/pi/web_ui/: __init__.py
src/pi_python/: __main__.py
src/pi_python/agent/: __init__.py  loop.py  tools.py
src/pi_python/agent/providers/: __init__.py  base.py  zai.py
src/pi_python/cli/: __init__.py  main.py  session.py
tests/: test_ai_sdk.py  test_cli.py  test_context.py  test_loop.py  test_package_surfaces.py  test_porting.py  test_provider_zai.py  test_tools.py  test_upstream.py
