[project]
name = "pi-python"
version = "0.1.0"
description = "Minimal Python agent loop inspired by pi"
readme = "README.md"
authors = [
    { name = "dakixr", email = "dakixr@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27,<0.29",
    "pydantic>=2.9,<3.0",
]

[project.scripts]
pi-python = "pi_python.cli.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
