[project]
name = "pi-python"
version = "0.2.0"
description = "Native Python pi agent toolkit"
readme = "README.md"
authors = [{ name = "dakixr", email = "dakixr@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["httpx>=0.27,<0.29", "prompt-toolkit>=3.0,<4.0", "pydantic>=2.9,<3.0", "rich>=13.9,<15.0", "typer>=0.24.1"]

[project.scripts]
pi = "pi.cli.main:main"

[dependency-groups]
dev = ["pytest>=8.3"]

[tool.uv.build-backend]
module-name = "pi"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
